Wed Mar 28 10:45:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event.{h,cpp}:
          Extende constructor with LPSECURITY_ATTRIBUTES sa argument that
          can be used to pass in the security attributes that are then
          passes to event_init. Also made the removed_ member a real bool.
          Thanks to Michael Graf <mg at leutek dot de> for proposing
          this change

Wed Mar 28 09:05:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Base.inl:
          Intel 9.0 doesn't deliver the intrinsic byte swapping operations.
          This has been checked with Intel, they confirm this issue but
          also indicate they will not fix this anymore for Intel 9.0,
          Intel 9.1 and 10.0 don't have this issue. So, disabled the
          intrinsic byte swapping operations when Intel 9.0 is used

Tue Mar 27 13:58:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_933_Regression

Mon Mar 26 20:46:34 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ASNMP/asnmp/asn1.cpp
        * examples/Threads/thread_specific.cpp

          Fixes for string aliasing warnings.

Mon Mar 26 15:56:19 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Config_Test.cpp

          Workaround for strict aliasing warning from GCC.

Mon Mar 26 15:42:35 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/TSS_Test.cpp

          Workaround for strict aliasing warning from GCC.

Mon Mar 26 13:12:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Moved DIOP test from other to orb tests

Sun Mar 25 23:22:22 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/utility/Utility/ExH/System/DescriptiveException.hpp
        * contrib/utility/Utility/ExH/System/DescriptiveException.ipp