@@ -1,3 +1,10 @@
+Wed Mar 28 15:34:49 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * examples/APG/Logging/Trace.h
+        
+          Removed usage of variadic macros, they are not really necessary
+          here.
+
 Wed Mar 28 10:45:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Event.{h,cpp}:
